# de-complain

./: Cargo.toml  README.md  canister_ids.json  dfx.json  did.d.ts  package-lock.json  package.json
src/de-complain-backend/: Cargo.toml  de-complain-backend.did
src/de-complain-backend/src/: lib.rs  types.rs
src/de-complain-frontend/: package.json  tsconfig.json  vite.config.js
src/de-complain-frontend/src/: App.jsx  agent.js  auth.js  main.jsx
src/de-complain-frontend/src/components/: About.jsx  Accordion.jsx  Authentication.jsx  CommentSection.jsx  ComplaintForm.jsx  ComplaintItem.jsx  ComplaintList.jsx  FilterSort.jsx  StatusTracker.jsx  UpvoteSystem.jsx
src/de-complain-frontend/src/pages/: ComplaintDetails.jsx  Dashboard.jsx  Home.jsx
src/de-complain-frontend/src/styles/: Accordion.css  ComplainForm.css  ComplaintList.css  about.css  global.css
src/de-complain-frontend/src/util/: icpActor.js
