[package]
name = "de-complain-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-cdk = "0.10.1"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.4"
ic-stable-structures = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
candid = "0.9.0"
candid_derive = "0.6.1"

[lib]
crate-type = ["cdylib"]